fixes from the lab

--- a/SwiftServe_Project_V2.1/customerLogin_SwiftServe/Web.config
+++ b/SwiftServe_Project_V2.1/customerLogin_SwiftServe/Web.config
@@ -27,7 +27,7 @@
     <add name="swiftServeDB" connectionString="Data Source=PR-E216-42\\MSSQLSERVER2016;Initial Catalog=SwiftServe;Integrated Security=True"/>
     <!- -->
     <!-- -->
-    <add name="swiftServeDB" connectionString="Data Source=PR-E216-44\\MSSQLSERVER2016;Initial Catalog=SwiftServe;Integrated Security=True"/>
+    <add name="swiftServeDB" connectionString="Data Source=PR-A317-17\\MSSQLSERVER2016;Initial Catalog=SwiftServe;Integrated Security=True"/>
     <!-- -->
     <!-- Dylan working at home -->
     <!-- ->
